<resources>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="favorite">Favoritos</string>
    <string name="error_service">Não foi possível carregar a sua solicitação</string>
    <string name="title">Título</string>
    <string name="runtime">Duração</string>
    <string name="synopsis">Sinopse</string>
    <string name="genre">Gênero</string>
    <string name="detail">Detalhe</string>
    <string name="loadind">Carregando ...</string>
    <string name="share">Compartilhar</string>
    <string name="note">Nota</string>
    <string name="note_query">%s /10</string>
    <string name="release_date">Dt. Lançamento</string>
    <string name="error_share_movie">Não foi possível compartilhar</string>
    <string name="favorite_success">Adicionado como favorito</string>
    <string name="favorite_fail">Não foi possível completar a solicitação</string>
    <string name="favorite_delete_success">Removido dos favoritos</string>
    <string name="search">Pesquisar</string>
    <string name="movie_not_contains_overview_or_translation">O Título não tem sinopse ou tradução.</string>
    <string name="no_favorite_titles">Nenhum título favoritado</string>
    <string name="no_movie_show">Sem filmes !</string>
    <string name="offline">Verifique sua conexão</string>
</resources>
