<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">


    <android.support.constraint.ConstraintLayout
        android:id="@+id/container_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/dimen_20dp"
        tools:context="com.dionisiofilho.sicoob.moviedetail.MovieDetailActivity">

        <include
            android:id="@+id/inc_toolbar_detail"
            layout="@layout/default_toolbar"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view_detail"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="@dimen/dimen_0dp"
            android:background="@color/colorPrimary"
            app:layout_constraintBottom_toTopOf="@+id/tv_label_genre"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inc_toolbar_detail" />

        <android.support.v7.widget.CardView
            android:id="@+id/cv_detail_movie"
            android:layout_width="@dimen/dimen_150dp"
            android:layout_height="@dimen/dimen_200dp"
            android:layout_margin="@dimen/dimen_6dp"
            app:cardCornerRadius="@dimen/dimen_10dp"
            app:cardElevation="@dimen/dimen_6dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inc_toolbar_detail">

            <ImageView
                android:id="@+id/iv_movie_detail_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@mipmap/ic_launcher" />
        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/tv_title_movie"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen_6dp"
            android:text="@string/title"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/textsize_22sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toRightOf="@+id/cv_detail_movie"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inc_toolbar_detail" />

        <TextView
            android:id="@+id/tv_runtime_movie"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_6dp"
            android:drawableStart="@drawable/ic_access_time"
            android:drawablePadding="@dimen/dimen_6dp"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:padding="@dimen/dimen_6dp"
            android:text="@string/runtime"
            android:textColor="@color/white"
            android:textSize="@dimen/textsize_14sp"
            app:layout_constraintLeft_toRightOf="@+id/cv_detail_movie"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_movie" />

        <TextView
            android:id="@+id/tv_note_movie"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_star_yellow_full"
            android:drawablePadding="@dimen/dimen_6dp"
            android:gravity="center_vertical"
            android:padding="@dimen/dimen_6dp"
            android:text="@string/note"
            android:textColor="@color/white"
            android:textSize="@dimen/textsize_14sp"
            app:layout_constraintLeft_toLeftOf="@+id/tv_runtime_movie"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_runtime_movie" />

        <TextView
            android:id="@+id/tv_label_release_date_movie"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen_6dp"
            android:text="@string/release_date"
            android:textColor="@color/white"
            android:textSize="@dimen/textsize_14sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="@+id/tv_runtime_movie"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_note_movie" />

        <TextView
            android:id="@+id/tv_release_date_movie"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/dimen_6dp"
            android:textColor="@color/white"
            android:textSize="@dimen/textsize_14sp"
            app:layout_constraintLeft_toLeftOf="@+id/tv_runtime_movie"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_label_release_date_movie" />


        <TextView
            android:id="@+id/tv_label_genre"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_50dp"
            android:padding="@dimen/dimen_6dp"
            android:text="@string/genre"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/textsize_24sp"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_release_date_movie" />


        <android.support.v7.widget.RecyclerView
            android:id="@+id/lv_genre_movie"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/genre"
            android:textColor="@color/white"
            android:textSize="@dimen/textsize_14sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_label_genre" />

        <android.support.v7.widget.CardView
            android:id="@+id/cv_overview"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_6dp"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:layout_marginEnd="@dimen/dimen_6dp"
            android:layout_marginBottom="@dimen/dimen_20dp"
            app:cardCornerRadius="@dimen/dimen_10dp"
            app:cardElevation="@dimen/dimen_6dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lv_genre_movie">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_label_overview"
                    android:layout_width="@dimen/dimen_0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_10dp"
                    android:padding="@dimen/dimen_6dp"
                    android:text="@string/synopsis"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/textsize_24sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_synopsis_movie"
                    android:layout_width="@dimen/dimen_0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:padding="@dimen/dimen_6dp"
                    android:text="@string/synopsis"
                    android:textSize="@dimen/textsize_16sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_label_overview" />

            </android.support.constraint.ConstraintLayout>


        </android.support.v7.widget.CardView>
    </android.support.constraint.ConstraintLayout>

</android.support.v4.widget.NestedScrollView>
